--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-intersection-observer": "^9.16.0",
+    "rough": "^3.0.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.9"
   },
